@@ -1,4 +1,3 @@
-/*
 package user;
 
 import YandexPracticium.ShareItServerApplication;
@@ -16,18 +15,16 @@ import org.springframework.test.web.servlet.MockMvc;
 
 
 import java.nio.charset.StandardCharsets;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
-
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.times;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @ContextConfiguration(classes = ShareItServerApplication.class)
 @WebMvcTest(controllers = UserController.class)
@@ -41,41 +38,37 @@ class UserControllerTest {
     @Autowired
     private MockMvc mvc;
 
-    private UserDto makeUserDto(Long id, String email, String name, LocalDate date) {
+    private UserDto makeUserDto(Long id, String email, String name) {
         UserDto dto = new UserDto();
         dto.setId(id);
         dto.setEmail(email);
         dto.setName(name);
-        dto.setBirthday(date);
-
         return dto;
     }
 
     @Test
     void createUserTest() throws Exception {
-        UserDto userDto = makeUserDto(1L, "john.doe@mail.com", "John Doe", LocalDate.of(2022, 7, 3));
+        UserDto userDto = makeUserDto(1L, "john.doe@mail.com", "John Doe");
 
-        when(userService.create(any())).thenReturn(userDto);
+        when(userService.addUser(any())).thenReturn(userDto);
 
         mvc.perform(post(urlTemplate)
                         .content(mapper.writeValueAsString(userDto))
                         .characterEncoding(StandardCharsets.UTF_8)
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isCreated())
+                .andExpect(status().isOk())
                 .andExpect(jsonPath("$").exists())
-                .andExpect(jsonPath("$.id", is(userDto.getId()), Long.class))
-                .andExpect(jsonPath("$.email", is(userDto.getEmail()), String.class))
-                .andExpect(jsonPath("$.name", is(userDto.getName()), String.class))
-                .andExpect(jsonPath("$.birthday", is(userDto.getBirthday()
-                        .format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))), String.class));
+                .andExpect(jsonPath("$.id", is(userDto.getId().intValue())))
+                .andExpect(jsonPath("$.email", is(userDto.getEmail())))
+                .andExpect(jsonPath("$.name", is(userDto.getName())));
     }
 
     @Test
     void findUserTest() throws Exception {
-        UserDto findUser = makeUserDto(1L, "ivan@email", "Ivan Ivanov", LocalDate.of(2022, 7, 3));
+        UserDto findUser = makeUserDto(1L, "ivan@email", "Ivan");
 
-        when(userService.findUser(anyLong())).thenReturn(findUser);
+        when(userService.getUserById(anyLong())).thenReturn(findUser);
 
         mvc.perform(get(urlTemplate + "/" + findUser.getId())
                         .characterEncoding(StandardCharsets.UTF_8)
@@ -83,20 +76,18 @@ class UserControllerTest {
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").exists())
-                .andExpect(jsonPath("$.id", is(findUser.getId()), Long.class))
-                .andExpect(jsonPath("$.email", is(findUser.getEmail()), String.class))
-                .andExpect(jsonPath("$.name", is(findUser.getName()), String.class))
-                .andExpect(jsonPath("$.birthday", is(findUser.getBirthday()
-                        .format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))), String.class));
+                .andExpect(jsonPath("$.id", is(findUser.getId().intValue())))
+                .andExpect(jsonPath("$.email", is(findUser.getEmail())))
+                .andExpect(jsonPath("$.name", is(findUser.getName())));
     }
 
     @Test
     void getUsersTest() throws Exception {
         List<UserDto> newUsers = List.of(
-                makeUserDto(1L, "ivan@email", "Ivan Ivanov", LocalDate.of(2022, 7, 3)),
-                makeUserDto(2L, "petr@email", "Petr Petrov", LocalDate.of(2022, 8, 4)));
+                makeUserDto(1L, "ivan@email", "Ivan"),
+                makeUserDto(2L, "petr@email", "Petr"));
 
-        when(userService.getUsers()).thenReturn(newUsers);
+        when(userService.getAllUsers()).thenReturn(newUsers);
 
         mvc.perform(get(urlTemplate)
                         .characterEncoding(StandardCharsets.UTF_8)
@@ -106,23 +97,19 @@ class UserControllerTest {
                 .andExpect(jsonPath("$").exists())
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].id").value(is(newUsers.getFirst().getId()), Long.class))
-                .andExpect(jsonPath("$[0].email").value(is(newUsers.getFirst().getEmail())))
-                .andExpect(jsonPath("$[0].name").value(is(newUsers.getFirst().getName())))
-                .andExpect(jsonPath("$[0].birthday", is(newUsers.getFirst().getBirthday()
-                        .format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))), String.class))
-                .andExpect(jsonPath("$[1].id").value(is(newUsers.getLast().getId()), Long.class))
-                .andExpect(jsonPath("$[1].email").value(is(newUsers.getLast().getEmail())))
-                .andExpect(jsonPath("$[1].name").value(is(newUsers.getLast().getName())))
-                .andExpect(jsonPath("$[1].birthday", is(newUsers.getLast().getBirthday()
-                        .format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))), String.class));
+                .andExpect(jsonPath("$[0].id").value(is(newUsers.get(0).getId().intValue())))
+                .andExpect(jsonPath("$[0].email").value(is(newUsers.get(0).getEmail())))
+                .andExpect(jsonPath("$[0].name").value(is(newUsers.get(0).getName())))
+                .andExpect(jsonPath("$[1].id").value(is(newUsers.get(1).getId().intValue())))
+                .andExpect(jsonPath("$[1].email").value(is(newUsers.get(1).getEmail())))
+                .andExpect(jsonPath("$[1].name").value(is(newUsers.get(1).getName())));
     }
 
     @Test
     void updateTest() throws Exception {
-        UserDto userDto = makeUserDto(1L, "john.doe@mail.com", "John Doe", LocalDate.of(2022, 7, 3));
+        UserDto userDto = makeUserDto(1L, "john.doe@mail.com", "John Doe");
 
-        when(userService.update(anyLong(), any())).thenReturn(userDto);
+        when(userService.updateUser(anyLong(), any())).thenReturn(userDto);
 
         mvc.perform(patch(urlTemplate + "/" + userDto.getId())
                         .content(mapper.writeValueAsString(userDto))
@@ -131,19 +118,16 @@ class UserControllerTest {
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").exists())
-                .andExpect(jsonPath("$.id", is(userDto.getId()), Long.class))
-                .andExpect(jsonPath("$.email", is(userDto.getEmail()), String.class))
-                .andExpect(jsonPath("$.name", is(userDto.getName()), String.class))
-                .andExpect(jsonPath("$.birthday", is(userDto.getBirthday()
-                        .format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))), String.class));
+                .andExpect(jsonPath("$.id", is(userDto.getId().intValue())))
+                .andExpect(jsonPath("$.email", is(userDto.getEmail())))
+                .andExpect(jsonPath("$.name", is(userDto.getName())));
     }
 
     @Test
     void deleteTest() throws Exception {
-        mvc.perform(delete(urlTemplate + "/" + anyLong()))
+        mvc.perform(delete(urlTemplate + "/1"))
                 .andExpect(status().isOk());
 
-        verify(userService, times(1)).delete(anyLong());
+        verify(userService, times(1)).deleteUser(1L);
     }
 }
-*/
